k8s/platform/ingress/active-envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: launchmywork-gateway
  namespace: platform-envoy-gateway
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.launchmywork.com"
      allowedRoutes:
        namespaces:
          from: All

    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.launchmywork.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: launchmywork-wildcard-tls
      allowedRoutes:
        namespaces:
          from: All
